--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="">Estudantes</a></li>
             <li><a href="">Professor</a></li>
             <li><a href="">Componentes Curriculares</a></li>
+            <li><a href="">Home</a></li>
         </ul>
     </header>
     
