--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <header>
         <ul>
-            <li><a href="">Estudantes</a></li>
-            <li><a href="">Professor</a></li>
-            <li><a href="">Componentes Curriculares</a></li>
-            <li><a href="">Home</a></li>
+            <li><a href="estudantes.html">Estudantes</a></li>
+            <li><a href="professor.html">Professor</a></li>
+            <li><a href="componentes.html">Componentes Curriculares</a></li>
+            <li><a href="home.html">Home</a></li>
         </ul>
     </header>
     
