--- a/estudantes.html
+++ b/estudantes.html
@@ -7,9 +7,22 @@
 </head>
 <body>
     <header>
-        <li><a href="professor.html">Professor</a></li>
-        <li><a href="componentes.html">Componentes Curriculares</a></li>
-        <li><a href="home.html">Home</a></li>
+          <ul>
+            <li><a href="professor.html">Professor</a></li>
+            <li><a href="componentes.html">Componentes Curriculares</a></li>
+            <li><a href="home.html">Home</a></li>
+          </ul>
     </header>
+
+       <table border="1px">
+           <thead>
+                <tr> 
+                <th>Número</th>
+                <th>Nome do Estudante</th>
+               </tr>
+           </thead>
+       </table>
+
+
 </body>
 </html>
